--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "lodash": "^4.17.10"
   },
   "devDependencies": {
-    "joi": "^13.1.2",
-    "mocha": "^5.0.5"
+    "joi": ">=13.1.2",
+    "mocha": ">=5.0.5"
   },
   "engines": {
-    "node": "^6.0.0",
-    "npm": "^5.0.0"
+    "node": ">=6.0.0",
+    "npm": ">=5.0.0"
   }
 }
